# data-ingestor

./: .gitignore  README.md  pyproject.toml
back-end/fake-api/: start.py
backend/: start.py
backend/contracts/: schema.py
backend/datasource/: api.py  postgre.py
backend/fakeapi/: start.py
backend/tools/aws/: client.py
backend/tools/sql/db/: database_connection.py
frontend/: main.py
frontend/aws/: cliente.py
frontend/contract/: catalogo.py
frontend/datasource/: csv.py
